--- a/Warhammer 40k Black Crusade/warhammer40k.scss
+++ b/Warhammer 40k Black Crusade/warhammer40k.scss
@@ -128,6 +128,7 @@ div.sheet-pc {
             font-size: 1em;
             color: $dark;
         }
+
         div.sheet-archetype {
             grid-template-columns: auto 1fr auto 3em auto 1fr;
         }
@@ -136,8 +137,35 @@ div.sheet-pc {
     div.sheet-characteristics {
         margin-top: 2%;
 
+        div.sheet-border {
+          border: 0.1em solid $dark;
+          border-radius: 0.1em;
+          font-size: 3em;
+          min-height: 75px;
+          padding: 10% 2%;
+          text-align: center;
+        }
+
+        input.sheet-toggles,
+        span.sheet-toggles {
+          grid-area: 1 / 10 / 1 / 10;
+        }
+
+        div.sheet-settings {
+          grid-column: 1 / 11;
+        }
+
         div.sheet-10column {
             grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        }
+
+        h1[data-i18n='characteristics'] {
+          grid-column: 1 / 10;
+        }
+
+        h1[data-i18n='scores'],
+        h1[data-i18n='modifier'] {
+          grid-column: 1 / 11;
         }
 
         h2 {
