saving progress on sheet workers

--- a/Warhammer 40k Black Crusade/warhammer40k.pug
+++ b/Warhammer 40k Black Crusade/warhammer40k.pug
@@ -82,7 +82,7 @@ input.display_string(name='attr_character_settings' type='hidden' value='')
 							h2.small-caps(data-i18n=key)
 						.rowx
 							+numberInput(`${key}`)
-				h1.text-center(data-i18n='modifier')
+				h1.text-center(data-i18n='modifier bonus')
 				each val, key in characteristics
 					.col.grid
 						.rowx.text-center
