--- a/Warhammer 40k Black Crusade/warhammer40k.scss
+++ b/Warhammer 40k Black Crusade/warhammer40k.scss
@@ -164,7 +164,7 @@ div.sheet-pc {
         }
 
         h1[data-i18n='scores'],
-        h1[data-i18n='modifier'] {
+        h1[data-i18n='modifier bonus'] {
           grid-column: 1 / 11;
         }
 
