--- a/Warhammer 40k Black Crusade/src/scss/_generic.scss
+++ b/Warhammer 40k Black Crusade/src/scss/_generic.scss
@@ -9,7 +9,7 @@
     }
 
     .sheet-bottom-border {
-        border-bottom: 0.2em solid $dark;
+        border-bottom: 0.15em solid $dark;
     }
 
     div.sheet-borders {
@@ -30,6 +30,10 @@
 
     .sheet-d20 {
         font-family: "dicefontd20";
+    }
+
+    .sheet-description {
+        white-space: pre-line;
     }
 
     .sheet-eclipse {
