--- a/Warhammer 40k Black Crusade/warhammer40k.css
+++ b/Warhammer 40k Black Crusade/warhammer40k.css
@@ -45,7 +45,7 @@ h2 {
   line-height: 1.4em;
   text-transform: capitalize; }
   h2.sheet-label {
-    border-bottom: 0.15em solid black;
+    border-bottom: 0.15em solid #333333;
     text-align: center;
     margin-left: 3%; }
 
@@ -56,7 +56,7 @@ h3 {
 
 input[type="text"], input[type="number"] {
   background-color: transparent;
-  border-bottom: 0.15em solid black;
+  border-bottom: 0.15em solid #333333;
   border-left: 0em;
   border-radius: 0em;
   border-right: 0em;
@@ -119,18 +119,18 @@ div.sheet-grid {
 /* GENERIC CLASSES
     ============================= */
 div.sheet-background {
-  background-color: rgba(77, 77, 77, 0.07843); }
+  background-color: rgba(77, 77, 77, 0.24); }
 
 .sheet-border {
   border: 0.15em solid #4c4c4c; }
 
 .sheet-bottom-border {
-  border-bottom: 0.2em solid black; }
+  border-bottom: 0.15em solid #333333; }
 
 div.sheet-borders {
-  border-left: 0.2em solid black;
+  border-left: 0.2em solid #333333;
   border-radius: 0.5em;
-  border-right: 0.2em solid black;
+  border-right: 0.2em solid #333333;
   min-height: 20px;
   padding: 0px 10%; }
 
@@ -142,6 +142,9 @@ div.sheet-borders {
 
 .sheet-d20 {
   font-family: "dicefontd20"; }
+
+.sheet-description {
+  white-space: pre-line; }
 
 .sheet-eclipse {
   overflow: hidden;
@@ -204,7 +207,7 @@ div.sheet-8autocolumn {
   grid-template-columns: auto 1fr auto 1fr auto 1fr auto 1fr; }
 
 span.sheet-display {
-  border-bottom: 2px dotted black;
+  border-bottom: 2px dotted #333333;
   padding-top: 3%; }
 
 input.sheet-toggles {
@@ -231,6 +234,12 @@ div.sheet-header, .sheet-rolltemplate-rolls div.sheet-template-container div.she
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$light', endColorstr='$light',GradientType=0 );
   /* IE6-9 */ }
+
+.sheet-description {
+  white-space: pre-line; }
+
+.sheet-background-color {
+  background-color: rgba(77, 77, 77, 0.24); }
 
 /*  PC
     ============================= */
@@ -261,7 +270,7 @@ div.sheet-pc {
           grid-area: 1 / 1 / 1 / 1; }
         div.sheet-pc div.sheet-navigation label.sheet-pseudo-button input:checked + span {
           background-color: #ceccc0;
-          color: black;
+          color: #333333;
           margin-left: 5%; }
       div.sheet-pc div.sheet-navigation label.sheet-pseudo-button span {
         background-color: #620911;
@@ -275,34 +284,67 @@ div.sheet-pc {
         padding: 1% 3%;
         text-transform: capitalize;
         width: 80%; }
-  div.sheet-pc div.sheet-info h1 {
-    font-size: 1em;
-    color: black; }
-  div.sheet-pc div.sheet-info div.sheet-archetype {
-    grid-template-columns: auto 1fr auto 3em auto 1fr; }
+  div.sheet-pc div.sheet-info {
+    margin-top: 2%; }
+    div.sheet-pc div.sheet-info h1 {
+      font-size: 1em;
+      color: #333333; }
+    div.sheet-pc div.sheet-info div.sheet-names {
+      grid-template-columns: auto 1fr auto 1fr 1.5em 1.5em; }
+    div.sheet-pc div.sheet-info div.sheet-archetype {
+      grid-template-columns: auto 1fr auto 3em auto 1fr; }
+    div.sheet-pc div.sheet-info div.sheet-collapse,
+    div.sheet-pc div.sheet-info div.sheet-settings {
+      grid-column: 1 / 7; }
+    div.sheet-pc div.sheet-info input[name="attr_info_collapse"],
+    div.sheet-pc div.sheet-info input[name="attr_info_collapse"] + span.sheet-toggles {
+      grid-area: 1 / 5 / 1 / 6;
+      height: 100%; }
+    div.sheet-pc div.sheet-info input[name="attr_info_settings"],
+    div.sheet-pc div.sheet-info input[name="attr_info_settings"] + span.sheet-toggles {
+      grid-area: 1 / 6 / 1 / 7;
+      height: 100%; }
+    div.sheet-pc div.sheet-info span {
+      line-height: 36px; }
   div.sheet-pc div.sheet-characteristics {
     margin-top: 2%; }
     div.sheet-pc div.sheet-characteristics div.sheet-border {
-      border: 0.1em solid black;
+      border: 0.1em solid #333333;
       border-radius: 0.1em;
       font-size: 3em;
-      min-height: 75px;
-      padding: 10% 2%;
+      grid-row-gap: 5%;
+      grid-template-columns: 1fr 47%;
+      min-height: 85px;
       text-align: center; }
+      div.sheet-pc div.sheet-characteristics div.sheet-border div.sheet-score {
+        grid-area: 1 / 1 / 3 / 3; }
+      div.sheet-pc div.sheet-characteristics div.sheet-border div.sheet-bonus {
+        border-left: 0.1em dashed #333333;
+        border-top: 0.1em dashed #333333;
+        grid-area: 2 / 2 / 2 / 2;
+        line-height: 1em;
+        max-height: 30px;
+        padding: 5% 2%;
+        margin-bottom: -20%; }
+        div.sheet-pc div.sheet-characteristics div.sheet-border div.sheet-bonus span {
+          display: block;
+          font-size: 0.5em;
+          margin-top: -25%; }
     div.sheet-pc div.sheet-characteristics input.sheet-toggles,
     div.sheet-pc div.sheet-characteristics span.sheet-toggles {
       grid-area: 1 / 10 / 1 / 10; }
     div.sheet-pc div.sheet-characteristics div.sheet-settings {
       grid-column: 1 / 11; }
     div.sheet-pc div.sheet-characteristics div.sheet-10column {
-      grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; }
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; }
     div.sheet-pc div.sheet-characteristics h1[data-i18n='characteristics'] {
       grid-column: 1 / 10; }
     div.sheet-pc div.sheet-characteristics h1[data-i18n='scores'],
-    div.sheet-pc div.sheet-characteristics h1[data-i18n='modifier bonus'] {
+    div.sheet-pc div.sheet-characteristics h1[data-i18n='unnatural bonus'] {
       grid-column: 1 / 11; }
     div.sheet-pc div.sheet-characteristics h2 {
-      font-size: 1.1em; }
+      font-size: 1.1em;
+      min-height: 40px; }
     div.sheet-pc div.sheet-characteristics h3 {
       font-size: 1em; }
   div.sheet-pc div.sheet-skill-talents-traits {
@@ -362,70 +404,73 @@ div.sheet-pc {
     display: inline-block;
     width: 42%; }
     div.sheet-pc div.sheet-advancement div.sheet-right-col div.sheet-headers {
-      margin-top: 10%; }
+      margin-top: 5%; }
     div.sheet-pc div.sheet-advancement div.sheet-right-col div.sheet-grid {
       grid-template-columns: auto 1fr; }
-  div.sheet-pc div.sheet-arms div.sheet-headers,
-  div.sheet-pc div.sheet-arms div.sheet-repeating-container {
-    margin-top: 5%; }
-  div.sheet-pc div.sheet-arms div.sheet-left-col {
-    display: inline-block;
-    margin-right: 2%;
-    width: 54%; }
-    div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-repeating-container div.sheet-collapse,
-    div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-repeating-container div.sheet-settings {
-      grid-column: 1 / 4; }
-    div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-repeating-container div.sheet-collapse h2 {
-      font-size: 1em; }
-    div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-repeating-container div.sheet-collapse span.sheet-text-center {
-      padding: 15% 2%; }
-    div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-repeating-container div.sheet-settings h2 {
-      font-size: 1.1em; }
-    div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-movement h2 {
-      font-size: 1em; }
-    div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-psychic {
-      grid-template-columns: 5fr auto 1fr;
-      margin-bottom: 5%; }
-      div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-psychic h2 {
-        font-size: 1em;
-        margin-top: 15%; }
-  div.sheet-pc div.sheet-arms div.sheet-right-col {
-    display: inline-block;
-    width: 43%; }
-    div.sheet-pc div.sheet-arms div.sheet-right-col h2 {
-      font-size: 1.1em; }
-    div.sheet-pc div.sheet-arms div.sheet-right-col h3 {
-      font-size: 1em; }
-    div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-head div.sheet-col {
-      grid-column: 2; }
-    div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-center {
-      margin-top: 2%; }
-      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-center div.sheet-col:nth-of-type(1) {
-        grid-column: 1; }
-      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-center div.sheet-col:nth-of-type(2) {
+    div.sheet-pc div.sheet-advancement div.sheet-right-col div.sheet-calculatedXp {
+      padding-top: 5%; }
+  div.sheet-pc div.sheet-arms {
+    margin-top: 2%; }
+    div.sheet-pc div.sheet-arms div.sheet-headers,
+    div.sheet-pc div.sheet-arms div.sheet-repeating-container {
+      margin-top: 5%; }
+    div.sheet-pc div.sheet-arms div.sheet-left-col {
+      display: inline-block;
+      margin-right: 2%;
+      width: 54%; }
+      div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-repeating-container div.sheet-collapse,
+      div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-repeating-container div.sheet-settings {
+        grid-column: 1 / 4; }
+      div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-repeating-container div.sheet-collapse h2 {
+        font-size: 1em; }
+      div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-repeating-container div.sheet-collapse span.sheet-text-center {
+        padding: 15% 2%; }
+      div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-repeating-container div.sheet-settings h2 {
+        font-size: 1.1em; }
+      div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-movement h2 {
+        font-size: 1em; }
+      div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-psychic {
+        grid-template-columns: 5fr auto 1fr; }
+        div.sheet-pc div.sheet-arms div.sheet-left-col div.sheet-psychic h2 {
+          font-size: 1em;
+          margin-top: 15%; }
+    div.sheet-pc div.sheet-arms div.sheet-right-col {
+      display: inline-block;
+      width: 43%; }
+      div.sheet-pc div.sheet-arms div.sheet-right-col h2 {
+        font-size: 1.1em; }
+      div.sheet-pc div.sheet-arms div.sheet-right-col h3 {
+        font-size: 1em; }
+      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-head div.sheet-col {
         grid-column: 2; }
-      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-center div.sheet-col:nth-of-type(3) {
-        grid-column: 3; }
-    div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-legs {
-      margin-top: 2%; }
-      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-legs div.sheet-col:nth-of-type(1) {
-        grid-column: 1; }
-      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-legs div.sheet-col:nth-of-type(2) {
-        grid-column: 3; }
-    div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-repeating-container div.sheet-settings {
-      grid-column: 1 / 4; }
-    div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-infamy {
-      grid-template-columns: auto auto 1fr auto 1fr; }
-      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-infamy h1 {
-        font-size: 1.5em; }
-      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-infamy h2 {
-        margin-top: 15%; }
-    div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-corruption {
-      grid-template-columns: auto auto 1fr; }
-      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-corruption h1 {
-        font-size: 1.5em; }
-      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-corruption h2 {
-        margin-top: 15%; }
+      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-center {
+        margin-top: 2%; }
+        div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-center div.sheet-col:nth-of-type(1) {
+          grid-column: 1; }
+        div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-center div.sheet-col:nth-of-type(2) {
+          grid-column: 2; }
+        div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-center div.sheet-col:nth-of-type(3) {
+          grid-column: 3; }
+      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-legs {
+        margin-top: 2%; }
+        div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-legs div.sheet-col:nth-of-type(1) {
+          grid-column: 1; }
+        div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-legs div.sheet-col:nth-of-type(2) {
+          grid-column: 3; }
+      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-repeating-container div.sheet-settings {
+        grid-column: 1 / 4; }
+      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-infamy {
+        grid-template-columns: auto auto 1fr auto 1fr; }
+        div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-infamy h1 {
+          font-size: 1.5em; }
+        div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-infamy h2 {
+          margin-top: 15%; }
+      div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-corruption {
+        grid-template-columns: auto auto 1fr; }
+        div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-corruption h1 {
+          font-size: 1.5em; }
+        div.sheet-pc div.sheet-arms div.sheet-right-col div.sheet-corruption h2 {
+          margin-top: 15%; }
 
 /*  REPEATING SECTIONS
     ============================= */
@@ -535,7 +580,7 @@ div.sheet-footer {
 /* ROLL TEMPLATE STYLE
 ----------------------------- */
 .sheet-rolltemplate-rolls div.sheet-template-container {
-  border: 2px solid black;
+  border: 2px solid #333333;
   border-radius: 0.3em;
   box-shadow: inset 0px 0px 3px 1px #620911;
   text-align: center;
@@ -557,7 +602,7 @@ div.sheet-footer {
     color: #620911;
     font-weight: bold;
     font-size: 1.5em;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid #333333;
     padding: 3% 2%;
     text-transform: capitalize;
     margin-top: 0px; }
@@ -585,7 +630,7 @@ div.sheet-footer {
       .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-roll div.sheet-template-col {
         padding: 5%; }
         .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-roll div.sheet-template-col:nth-of-type(2) {
-          border-left: 2px solid black; }
+          border-left: 2px solid #333333; }
         .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-roll div.sheet-template-col span {
           display: block; }
           .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-roll div.sheet-template-col span:last-child {
@@ -606,11 +651,7 @@ input[name='attr_sheet_type'][value='advancement'] ~ div.sheet-pc div.sheet-char
 .sheet-settings {
   display: none; }
 
-div.sheet-characteristics input[name='attr_characteristics_settings']:checked ~ div.sheet-settings, div.sheet-advancement input[name='attr_settings']:checked ~ div.sheet-settings {
-  display: inline-grid; }
-
-div.sheet-characteristics input[name='attr_characteristics_settings']:checked ~ div.sheet-settings {
-  grid-column-gap: 1%; }
-
-div.sheet-advancement input[name='attr_settings']:checked ~ div.sheet-settings {
+div.sheet-characteristics input[name='attr_characteristics_settings']:checked ~ div.sheet-settings, div.sheet-advancement input[name='attr_settings']:checked ~ div.sheet-settings, div.sheet-info input[name='attr_info_settings']:checked ~ div.sheet-settings,
+div.sheet-info input[name='attr_info_collapse']:checked ~ div.sheet-collapse {
+  display: inline-grid;
   grid-column-gap: 1%; }
