--- a/Warhammer 40k Black Crusade/warhammer40k.scss
+++ b/Warhammer 40k Black Crusade/warhammer40k.scss
@@ -4,10 +4,10 @@
     $secondary  : hsl(72, 6%, 33%);
     $third  : hsl(42, 39%, 60%);
     $light  : hsl(51, 12%, 78%);
-    $dark    : hsl(0, 6%, 0%);
+    $dark    : hsl(0, 0%, 20%);
     $dark-font: #000;
     $gray     : #4c4c4c;
-    $transparentGray: hsla(0, 0%, 30%, 0.0784313725490196);
+    $transparentGray: hsla(0, 0%, 30%, 0.24);
     $white    : hsl(0, 0%, 96%);
 
 
@@ -61,6 +61,14 @@
         background: -webkit-linear-gradient(top,  $light 0%,$secondary 50%,$light 100%); /* Chrome10-25,Safari5.1-6 */
         background: linear-gradient(to bottom,  $light 0%,$secondary 50%,$light 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$light', endColorstr='$light',GradientType=0 ); /* IE6-9 */
+    }
+
+    .sheet-description {
+        white-space: pre-line;
+    }
+
+    .sheet-background-color {
+        background-color: $transparentGray;
     }
 
 /*  PC
@@ -124,13 +132,41 @@ div.sheet-pc {
     }
 
     div.sheet-info {
+        margin-top: 2%;
+
         h1 {
             font-size: 1em;
             color: $dark;
         }
 
+        div.sheet-names {
+            grid-template-columns: auto 1fr auto 1fr 1.5em 1.5em
+        }
+
         div.sheet-archetype {
             grid-template-columns: auto 1fr auto 3em auto 1fr;
+        }
+
+        div.sheet-collapse,
+        div.sheet-settings {
+            grid-column: 1 / 7;
+        }
+
+        input[name="attr_info_collapse"],
+        input[name="attr_info_collapse"] + span.sheet-toggles {
+          grid-area: 1 / 5 / 1 / 6;
+          height: 100%;
+        }
+
+
+        input[name="attr_info_settings"],
+        input[name="attr_info_settings"] + span.sheet-toggles {
+          grid-area: 1 / 6 / 1 / 7;
+          height: 100%;
+        }
+
+        span {
+            line-height: 36px;
         }
     }
 
@@ -141,9 +177,30 @@ div.sheet-pc {
           border: 0.1em solid $dark;
           border-radius: 0.1em;
           font-size: 3em;
-          min-height: 75px;
-          padding: 10% 2%;
+          grid-row-gap: 5%;
+          grid-template-columns: 1fr 47%;
+          min-height: 85px;
           text-align: center;
+
+          div.sheet-score {
+            grid-area: 1 / 1 / 3 / 3;
+          }
+
+          div.sheet-bonus {
+            border-left: 0.1em dashed $dark;
+            border-top: 0.1em dashed $dark;
+            grid-area: 2 / 2 / 2 / 2;
+            line-height: 1em;
+            max-height: 30px;
+            padding: 5% 2%;
+            margin-bottom: -20%;
+
+            span {
+                display: block;
+                font-size: 0.5em;
+                margin-top: -25%;
+            }
+          }
         }
 
         input.sheet-toggles,
@@ -156,7 +213,7 @@ div.sheet-pc {
         }
 
         div.sheet-10column {
-            grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
         }
 
         h1[data-i18n='characteristics'] {
@@ -164,12 +221,13 @@ div.sheet-pc {
         }
 
         h1[data-i18n='scores'],
-        h1[data-i18n='modifier bonus'] {
+        h1[data-i18n='unnatural bonus'] {
           grid-column: 1 / 11;
         }
 
         h2 {
             font-size: 1.1em;
+            min-height: 40px;
         }
 
         h3 {
@@ -276,16 +334,22 @@ div.sheet-pc {
             width: 42%;
 
             div.sheet-headers {
-                margin-top: 10%;
+                margin-top: 5%;
             }
 
             div.sheet-grid {
                 grid-template-columns: auto 1fr;
             }
+
+            div.sheet-calculatedXp {
+                padding-top: 5%;
+            }
         }
     }
 
     div.sheet-arms {
+        margin-top: 2%;
+
         div.sheet-headers,
         div.sheet-repeating-container {
           margin-top: 5%;
@@ -327,7 +391,6 @@ div.sheet-pc {
 
             div.sheet-psychic {
               grid-template-columns: 5fr auto 1fr;
-              margin-bottom: 5%;
 
               h2 {
                 font-size: 1em;
