--- a/Warhammer 40k Black Crusade/warhammer40k.css
+++ b/Warhammer 40k Black Crusade/warhammer40k.css
@@ -16,6 +16,8 @@ button {
     background: none;
     background-color: #620911 !important;
     color: #fff; }
+    button:focus > h2, button:hover > h2, button:active > h2 {
+      color: #fff; }
   button[type="roll"], button[type="action"] {
     background-color: whitesmoke;
     border-bottom: 0.01em solid #666;
@@ -24,8 +26,9 @@ button {
     border-radius: 0.25em;
     border-right: 0.02em solid #333333;
     border-style: outset;
+    font-size: 1em;
     margin: 0.2em !important;
-    padding: 0.1em !important; }
+    padding: 1% 2% !important; }
 
 div {
   background-color: transparent;
@@ -256,6 +259,7 @@ div.sheet-pc {
   div.sheet-pc div.sheet-navigation {
     grid-template-columns: 1fr minmax(auto, 100px) minmax(auto, 100px) minmax(auto, 100px); }
     div.sheet-pc div.sheet-navigation img {
+      grid-area: 1 / 1 / 3 / 2;
       max-height: 8em; }
     div.sheet-pc div.sheet-navigation label.sheet-pseudo-button {
       display: grid; }
@@ -353,6 +357,12 @@ div.sheet-pc {
       grid-template-columns: 70% 29%; }
     div.sheet-pc div.sheet-skill-talents-traits h2 {
       font-size: 1em; }
+    div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list button[type='roll'] {
+      text-align: left;
+      width: 100%; }
+    div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list button.sheet-d20 {
+      font-family: 'dicefontd20';
+      text-align: center; }
     div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list div.sheet-rowx {
       grid-template-columns: 65% 1fr 1fr 1fr 1fr; }
       div.sheet-pc div.sheet-skill-talents-traits div.sheet-skill-list div.sheet-rowx h2 {
@@ -409,6 +419,8 @@ div.sheet-pc {
       grid-template-columns: auto 1fr; }
     div.sheet-pc div.sheet-advancement div.sheet-right-col div.sheet-calculatedXp {
       padding-top: 5%; }
+    div.sheet-pc div.sheet-advancement div.sheet-right-col input[name="attr_current_alignment"] {
+      text-align: center; }
   div.sheet-pc div.sheet-arms {
     margin-top: 2%; }
     div.sheet-pc div.sheet-arms div.sheet-headers,
@@ -474,29 +486,33 @@ div.sheet-pc {
 
 /*  REPEATING SECTIONS
     ============================= */
-div.sheet-repeating-container button {
-  font-variant: none; }
-div.sheet-repeating-container textarea {
-  margin-top: 2%; }
-div.sheet-repeating-container .repcontrol {
-  margin-top: 5%; }
-div.sheet-repeating-container .repcontrol_del {
-  font-family: "pictos";
-  position: relative; }
-div.sheet-repeating-container div.sheet-collapse {
-  padding-left: 5%; }
-div.sheet-repeating-container div.sheet-settings {
-  background-color: #ceccc0;
-  grid-template-columns: 1fr;
-  padding: 2% 1%; }
-div.sheet-repeating-container div.sheet-descriptor {
-  grid-template-columns: 1fr 1.5em 1.5em; }
-  div.sheet-repeating-container div.sheet-descriptor input[name='attr_collapse'],
-  div.sheet-repeating-container div.sheet-descriptor input[name='attr_collapse'] + span {
-    grid-area: 1 / 2 / 1 / 2; }
-  div.sheet-repeating-container div.sheet-descriptor input[name='attr_settings'],
-  div.sheet-repeating-container div.sheet-descriptor input[name='attr_settings'] + span {
-    grid-area: 1 / 3 / 1 / 3; }
+div.sheet-repeating-container {
+  margin-bottom: 2%; }
+  div.sheet-repeating-container button {
+    font-variant: none; }
+  div.sheet-repeating-container textarea {
+    margin-top: 2%; }
+  div.sheet-repeating-container .repcontrol {
+    margin-top: 5%; }
+  div.sheet-repeating-container .repcontrol_del {
+    font-family: "pictos";
+    position: relative; }
+  div.sheet-repeating-container .repitem {
+    margin-bottom: 1%; }
+  div.sheet-repeating-container div.sheet-collapse {
+    padding-left: 5%; }
+  div.sheet-repeating-container div.sheet-settings {
+    background-color: #ceccc0;
+    grid-template-columns: 1fr;
+    padding: 2% 1%; }
+  div.sheet-repeating-container div.sheet-descriptor {
+    grid-template-columns: 1fr 1.5em 1.5em; }
+    div.sheet-repeating-container div.sheet-descriptor input[name='attr_collapse'],
+    div.sheet-repeating-container div.sheet-descriptor input[name='attr_collapse'] + span {
+      grid-area: 1 / 2 / 1 / 2; }
+    div.sheet-repeating-container div.sheet-descriptor input[name='attr_settings'],
+    div.sheet-repeating-container div.sheet-descriptor input[name='attr_settings'] + span {
+      grid-area: 1 / 3 / 1 / 3; }
 
 /*  SWITCH
     ============================= */
