--- a/Warhammer 40k Black Crusade/src/scss/_globals.scss
+++ b/Warhammer 40k Black Crusade/src/scss/_globals.scss
@@ -36,9 +36,8 @@
                 right              : 0.02em solid hsl(0, 0%, 20%);
                 style              : outset;
             }
-            font-size: 1em;
+            font-size: 1em !important;
             margin: 0.2em !important;
-            padding: 2% 1% !important;
         }
     }
 
