--- a/Warhammer 40k Black Crusade/src/scss/_rolltemplate.scss
+++ b/Warhammer 40k Black Crusade/src/scss/_rolltemplate.scss
@@ -1,4 +1,7 @@
 .sheet-rolltemplate-rolls {
+
+    /* ROLL TEMPLATE STYLE
+    ----------------------------- */
     div.sheet-template-container {
         border: 2px solid $dark;
         border-radius: 0.3em;
@@ -14,10 +17,6 @@
             border: none;
         }
 
-        .inlinerollresult.fullfail, .inlinerollresult.fullcrit {
-            color: $primary;
-        }
-
         .inlinerollresult {
             background-color: transparent;
             border: none;
@@ -27,26 +26,32 @@
 
 
         div.sheet-template-header {
-            @extend div.sheet-header; 
-
-            color: $primary;
-            font-weight: bold;
-            font-size: 1.5em; 
+            background-color: $primary;
             border-bottom: 2px solid $dark;
-            padding: 3% 2%;
+            color: $white;
+            font-size: 1.5em; 
+            font-weight: bold;
+            margin-top: -2px;
+            padding: 5% 2%;
             text-transform: capitalize;
-            margin-top:0px;
+           -moz-box-shadow:    inset 0 0 10px #000000;
+           -webkit-box-shadow: inset 0 0 10px #000000;
+           box-shadow:         inset 0 0 10px #000000;
         }
 
         div.sheet-template-body {
-            background-color: $white;
+            background-color: $light;
+            color: $dark;
+            padding: 4% 2%;
 
             div.sheet-template-row {
-                &:nth-child(2n+0) { background-color: $light; }
+                &:nth-child(2n+0) { 
+                    background-color: $light; 
+                }
 
                 span {
                     &.sheet-inlinerollresult  {
-                        color: $primary;
+                       // color: $dark;
                         font-size: 2em;
                         font-weight: bold;
                         cursor: help;
@@ -56,7 +61,7 @@
 
                     &.sheet-percent,
                     &.sheet-template-desc {
-                        color: $primary;
+                        color: $dark;
                         font-size: 1em;
                     }
                 }
