--- a/Warhammer 40k Black Crusade/warhammer40k.css
+++ b/Warhammer 40k Black Crusade/warhammer40k.css
@@ -26,9 +26,8 @@ button {
     border-radius: 0.25em;
     border-right: 0.02em solid #333333;
     border-style: outset;
-    font-size: 1em;
-    margin: 0.2em !important;
-    padding: 1% 2% !important; }
+    font-size: 1em !important;
+    margin: 0.2em !important; }
 
 div {
   background-color: transparent;
@@ -222,7 +221,7 @@ input.sheet-toggles {
     color: #620911;
     margin-left: 5%; }
 
-div.sheet-header, .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-header {
+div.sheet-header {
   margin-top: 2%;
   border-top: 2px solid #620911;
   border-bottom: 2px solid #620911;
@@ -339,16 +338,13 @@ div.sheet-pc {
       grid-area: 1 / 10 / 1 / 10; }
     div.sheet-pc div.sheet-characteristics div.sheet-settings {
       grid-column: 1 / 11; }
-    div.sheet-pc div.sheet-characteristics div.sheet-10column {
-      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; }
     div.sheet-pc div.sheet-characteristics h1[data-i18n='characteristics'] {
       grid-column: 1 / 10; }
     div.sheet-pc div.sheet-characteristics h1[data-i18n='scores'],
     div.sheet-pc div.sheet-characteristics h1[data-i18n='unnatural bonus'] {
       grid-column: 1 / 11; }
     div.sheet-pc div.sheet-characteristics h2 {
-      font-size: 1.1em;
-      min-height: 40px; }
+      font-size: 1em; }
     div.sheet-pc div.sheet-characteristics h3 {
       font-size: 1em; }
   div.sheet-pc div.sheet-skill-talents-traits {
@@ -595,62 +591,68 @@ div.sheet-footer {
 
 /* ROLL TEMPLATE STYLE
 ----------------------------- */
-.sheet-rolltemplate-rolls div.sheet-template-container {
-  border: 2px solid #333333;
-  border-radius: 0.3em;
-  box-shadow: inset 0px 0px 3px 1px #620911;
-  text-align: center;
-  font-family: 'fantasy';
-  /* DICE ROLL STYLES
+.sheet-rolltemplate-rolls {
+  /* ROLL TEMPLATE STYLE
   ----------------------------- */ }
-  .sheet-rolltemplate-rolls div.sheet-template-container .inlinerollresult.fullfail,
-  .sheet-rolltemplate-rolls div.sheet-template-container .inlinerollresult.fullcrit,
-  .sheet-rolltemplate-rolls div.sheet-template-container .inlinerollresult.importantroll {
-    border: none; }
-  .sheet-rolltemplate-rolls div.sheet-template-container .inlinerollresult.fullfail, .sheet-rolltemplate-rolls div.sheet-template-container .inlinerollresult.fullcrit {
-    color: #620911; }
-  .sheet-rolltemplate-rolls div.sheet-template-container .inlinerollresult {
-    background-color: transparent;
-    border: none;
-    font-size: 2em;
-    padding: unset; }
-  .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-header {
-    color: #620911;
-    font-weight: bold;
-    font-size: 1.5em;
-    border-bottom: 2px solid #333333;
-    padding: 3% 2%;
-    text-transform: capitalize;
-    margin-top: 0px; }
-  .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body {
-    background-color: whitesmoke; }
-    .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-row:nth-child(2n+0) {
-      background-color: #ceccc0; }
-    .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-row span.sheet-inlinerollresult {
-      color: #620911;
+  .sheet-rolltemplate-rolls div.sheet-template-container {
+    border: 2px solid #333333;
+    border-radius: 0.3em;
+    box-shadow: inset 0px 0px 3px 1px #620911;
+    text-align: center;
+    font-family: 'fantasy';
+    /* DICE ROLL STYLES
+    ----------------------------- */ }
+    .sheet-rolltemplate-rolls div.sheet-template-container .inlinerollresult.fullfail,
+    .sheet-rolltemplate-rolls div.sheet-template-container .inlinerollresult.fullcrit,
+    .sheet-rolltemplate-rolls div.sheet-template-container .inlinerollresult.importantroll {
+      border: none; }
+    .sheet-rolltemplate-rolls div.sheet-template-container .inlinerollresult {
+      background-color: transparent;
+      border: none;
       font-size: 2em;
+      padding: unset; }
+    .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-header {
+      background-color: #620911;
+      border-bottom: 2px solid #333333;
+      color: whitesmoke;
+      font-size: 1.5em;
       font-weight: bold;
-      cursor: help;
-      padding: 0 3px 0 3px;
-      font-weight: bold; }
-    .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-row span.sheet-percent, .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-row span.sheet-template-desc {
-      color: #620911;
-      font-size: 1em; }
-    .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-damage {
-      background-color: #fff;
-      padding: 3% 2%; }
-    .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-roll {
-      display: inline-grid;
-      grid-template-columns: 1fr 1fr;
-      width: 100%; }
-      .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-roll div.sheet-template-col {
-        padding: 5%; }
-        .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-roll div.sheet-template-col:nth-of-type(2) {
-          border-left: 2px solid #333333; }
-        .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-roll div.sheet-template-col span {
-          display: block; }
-          .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-roll div.sheet-template-col span:last-child {
-            margin-top: 5%; }
+      margin-top: -2px;
+      padding: 5% 2%;
+      text-transform: capitalize;
+      -moz-box-shadow: inset 0 0 10px #000000;
+      -webkit-box-shadow: inset 0 0 10px #000000;
+      box-shadow: inset 0 0 10px #000000; }
+    .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body {
+      background-color: #ceccc0;
+      color: #333333;
+      padding: 4% 2%; }
+      .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-row:nth-child(2n+0) {
+        background-color: #ceccc0; }
+      .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-row span.sheet-inlinerollresult {
+        font-size: 2em;
+        font-weight: bold;
+        cursor: help;
+        padding: 0 3px 0 3px;
+        font-weight: bold; }
+      .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-row span.sheet-percent, .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-row span.sheet-template-desc {
+        color: #333333;
+        font-size: 1em; }
+      .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-damage {
+        background-color: #fff;
+        padding: 3% 2%; }
+      .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-roll {
+        display: inline-grid;
+        grid-template-columns: 1fr 1fr;
+        width: 100%; }
+        .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-roll div.sheet-template-col {
+          padding: 5%; }
+          .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-roll div.sheet-template-col:nth-of-type(2) {
+            border-left: 2px solid #333333; }
+          .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-roll div.sheet-template-col span {
+            display: block; }
+            .sheet-rolltemplate-rolls div.sheet-template-container div.sheet-template-body div.sheet-template-roll div.sheet-template-col span:last-child {
+              margin-top: 5%; }
 
 /*  SHOW & HIDE SHEETS
     ============================= */
